vl-overlay: fix flickering when used with v-if

--- a/src/styles/component/_overlay.scss
+++ b/src/styles/component/_overlay.scss
@@ -1,8 +1,9 @@
 .vl-overlay {
-  position: relative;
+  position: absolute;
   visibility: hidden;
 
   &.visible {
+    position: relative;
     visibility: visible;
   }
 }
